@startuml
title Модель данных школьного журнала
skinparam backgroundColor #FEFEFE
skinparam roundcorner 20
skinparam shadowing true
skinparam class {
  BackgroundColor White
  BorderColor #386B7F
  BorderThickness 2
  FontColor #1F2E3A
  FontSize 14
  FontName Arial
}
skinparam arrow {
  Color #386B7F
  Thickness 2
  FontSize 12
}
skinparam note {
  BackgroundColor #FFF9C4
  BorderColor #FBC02D
}
skinparam linetype ortho
hide circle

!define table(x) entity x << (T, #E1F5FE) >>  ' светло-голубой фон по умолчанию
!define primary_key(x) <color:#B71C1C><b>x</b></color>
!define foreign_key(x) <color:#0D47A1><b>x</b></color>

entity Teachers << (T, #FFE0B2) >> {
  * primary_key(Id) : INTEGER <<generated>>
  --
  * FullName : TEXT
  * RoomNumber : TEXT
}

entity Students << (T, #C8E6C9) >> {
  * primary_key(Id) : INTEGER <<generated>>
  --
  * LastName : TEXT
  * FirstName : TEXT
  * ClassName : TEXT
}

entity Subjects << (T, #B3E5FC) >> {
  * primary_key(Id) : INTEGER <<generated>>
  --
  * Name : TEXT
  * foreign_key(TeacherId) : INTEGER
}

entity Grades << (T, #F8BBD0) >> {
  * primary_key(Id) : INTEGER <<generated>>
  --
  * foreign_key(StudentId) : INTEGER
  * foreign_key(SubjectId) : INTEGER
  * Value : INTEGER
  * Quarter : INTEGER
}

Teachers ||--o{ Subjects
Subjects ||--o{ Grades
Students ||--o{ Grades

note top of Grades
  Оценка может быть только 2, 3, 4 или 5.
  Четверть — число от 1 до 4.
end note

legend right
  <b>Условные обозначения:</b>
  <color:red>Первичный ключ</color>
  <color:blue>Внешний ключ</color>
  * Обязательное поле
  <<generated>> Автоинкремент
end legend

@enduml